regensburg talk arxiv papers

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ In my passion to make homotopical thinking more accessible to a wider range of m
 </p>
 
 <p>
+    <b>Fun fact:</b> As far as I know, I hold the world for consecutive arXiv papers: <a href="https://arxiv.org/abs/2508.07735">3</a> <a href="https://arxiv.org/abs/2508.07736">consecutive</a> <a href="https://arxiv.org/abs/2508.07737">papers</a>! If you know of a longer streak, then let me know! 
+</p>
+
+<p>
 I have also taught a course focused on homotopy theory and higher category theory that I would like to expand upon in the future. In the meantime you can find the <a href="Higher_Categories_EPFL.pdf">lecture notes</a>  for my course.</p>
 </p>
 
@@ -108,6 +112,7 @@ Before coming to Greifswald I was a postdoctoral fellow at the <a href="https://
 
 <h2> <a id="Re">News</a> </h2>
 <ul>
+    <li> <b>December 2025:</b> I gave a talk titled ``<em>What is an ∞-Category</em>'' in the <a href="https://sfb-higher-invariants.app.uni-regensburg.de/index.php/AG-Seminar_WS2021/22:">Topology Seminar</a> at the <a href="https://www.uni-regensburg.de/">Universität Regensburg</a> on December 11, 2025! The goal is to discuss the existence of notions of ∞-categories that have not yet been considered before. Here are the <a href="regensburg.pdf">talk notes</a>.</li>
     <li> <b>November 2025:</b> I will be giving an (online) talk titled ``<em>Hochschild Homology of Bicategories</em>'' at the <a href="https://mathematics.haifa.ac.il/?p=3068">Topology & Geometry Seminar</a> at the <a href="https://mathematics.haifa.ac.il/">University of Haifa</a>. I talk about my joint <a href="https://arxiv.org/abs/2109.02144">paper</a> with <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a> about bicategorical methods in Hochschild mathematics.</li>
     <li> <b>November 2025:</b> I gave a talk titled ``<em>Filter Quotient Models in Homotopy Type Theory</em>'' at the <a href="https://sites.google.com/view/higherstructures/meetings">First Meeting of the Network Higher Structures in Category Theory, Homotopy Theory and Type Theory</a> at the <a href="https://www.nottingham.ac.uk/">University of Nottingham</a> on November 19, 2025! The goal is to talk about the triple papers on filter quotients and homotopy type theory from August 2025. Here are the <a href="nottingham.pdf">talk notes</a>.</li>
     <li> <b>October 2025:</b> I am organizing a summer school titled ``<a href="https://icerm.brown.edu/program/topical_workshop/tw-26-thc">Teaching Higher Category Theory with Computers</a> at <a href="https://icerm.brown.edu/">ICERM</a> August 17 - 21, 2026 along with <a href="https://math.jhu.edu/~eriehl/">Emily Riehl</a> and <a href="https://sites.google.com/view/jonathanweinberger">Jonathan Weinberger</a>. If you are interested in learning about ∞-category theory and how it can be formalized, you should <a href="https://app.icerm.brown.edu/Cube/apply/607">apply</a>.</li>
