--- a/deutsch.html
+++ b/deutsch.html
@@ -90,7 +90,12 @@ body {
 
 <p>
     In meiner Leidenschaft, das homotopische Denken einem breiteren Spektrum von Mathematikern und Informatikern zugänglicher zu machen, verfolge ich jetzt auch die <b>Formalisierung der Mathematik</b> und insbesondere homotopischer Strukturen. Mehr Details über meine Formalisierungen sind auf <a href="https://github.com/nimarasekh">Github</a> Seite finden. <a href="Weihnachten_Greifswald.pdf">Hier</a> sind auch Folien meines Vortrags im Weihnachtskolloquium über Formalisierung in der Mathematik.
-</p>    
+</p>
+
+<p>
+    <b>Fun fact:</b> So weit ich weiß, halte ich den Weltrekord für aufeinanderfolgende arXiv-Papiere: <a href="https://arxiv.org/abs/2508.07735">3</a> <a href="https://arxiv.org/abs/2508.07736">aufeinanderfolgende</a> <a href="https://arxiv.org/abs/2508.07737">Papiere</a>! Wenn jemand von einer längeren Serie weiß, gerne kontaktieren! 
+</p>
+
 <p>    
     Ich habe auch eine Vorlesung zur Homotopietheorie und höheren Kategorientheorie gehalten, dessen Inhalt ich in der Zukunft erweitern möchte. In der Zwischenzeit gibt es hier den <a href="Higher_Categories_EPFL.pdf">Skript der Vorlesung</a>.
 </p>
@@ -108,6 +113,7 @@ Vor meiner jetzigen Position in Greifswald war ich eine Zeit lang Postdoktorand 
 
 <h2> <a id="Re">Neuigkeiten</a> </h2>
 <ul>
+    <li> <b>Dezember 2025:</b> Ich habe einen Vortrag mit dem Titel ``<em>What is an ∞-Category</em>'' im <a href="https://sfb-higher-invariants.app.uni-regensburg.de/index.php/AG-Seminar_WS2021/22:">Topology Seminar</a> an der <a href="https://www.uni-regensburg.de/">Universität Regensburg</a> am 11. December 2025 gehalten! Das Ziel ist es, die Existenz von Definitionen von ∞-Kategorien zu diskutieren, die bisher noch nicht in Betracht gezogen wurden. Hier ist der <a href="regensburg.pdf">Vortragsskript</a>.</li>
     <li> <b>November 2025:</b> I halte einen (online) Vortrag mit dem Titel ``<em>Hochschild Homology of Bicategories</em>'' im <a href="https://mathematics.haifa.ac.il/?p=3068">Topology & Geometry Seminar</a> an der <a href="https://mathematics.haifa.ac.il/">University of Haifa</a>. Ich rede über mein <a href="https://arxiv.org/abs/2109.02144">Papier</a> mit <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a> über bikategorische Methoden in der Hochschild Mathematik.</li>
     <li> <b>November 2025:</b> Ich habe einen Vortrag mit dem Titel ``<em>Filter Quotient Models in Homotopy Type Theory</em>'' auf der <a href="https://sites.google.com/view/higherstructures/meetings">First Meeting of the Network Higher Structures in Category Theory, Homotopy Theory and Type Theory</a> an der <a href="https://www.nottingham.ac.uk/">University of Nottingham</a> am 19. November 2025 gehalten! Ziel ist es, über die drei Artikel zu Filterquotienten und Homotopietypentheorie aus dem August 2025 zu sprechen. Hier ist der <a href="nottingham.pdf">Vortragsskript</a>.</li>
     <li> <b>Oktober 2025:</b> Ich organisiere eine Sommerschule mit dem Titel ``<a href="https://icerm.brown.edu/program/topical_workshop/tw-26-thc">Teaching Higher Category Theory with Computers</a> am <a href="https://icerm.brown.edu/">ICERM</a> vom 17. bis 21. August 2026 zusammen mit <a href="https://math.jhu.edu/~eriehl/">Emily Riehl</a> und <a href="https://sites.google.com/view/jonathanweinberger">Jonathan Weinberger</a>. Falls ihr interessiert seid, mehr über ∞-Kategorientheorie und deren Formalisierung zu lernen, solltet ihr euch <a href="https://app.icerm.brown.edu/Cube/apply/607">bewerben</a>.</li>
