--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ In my passion to make homotopical thinking more accessible to a wider range of m
 </p>
 
 <p>
-    <b>Fun fact:</b> As far as I know, I hold the world for consecutive arXiv papers: <a href="https://arxiv.org/abs/2508.07735">3</a> <a href="https://arxiv.org/abs/2508.07736">consecutive</a> <a href="https://arxiv.org/abs/2508.07737">papers</a>! If you know of a longer streak, then let me know! 
+    <b>Fun fact:</b> As far as I know, I hold the world record for consecutive arXiv papers: <a href="https://arxiv.org/abs/2508.07735">3</a> <a href="https://arxiv.org/abs/2508.07736">consecutive</a> <a href="https://arxiv.org/abs/2508.07737">papers</a>! If you know of a longer streak, then let me know! 
 </p>
 
 <p>
