--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 <div class="image-container">
     <img src="Nima_MFO.jpg" alt="Photo of Nima Rasekh at Oberwolfach" class="profile-image">
 </div>
-    <p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)</p>
+    <p>(<a href="https://nimarasekh.github.io/deutsch">deutsche Version</a>)<br> (<a href="https://nimarasekh.github.io/farsi.html">نسخه فارسی</a>)</p>
 
 <p> I am currently a postdoctoral researcher at the <a href="https://www.uni-greifswald.de/">Universität Greifswald</a>, in the research group of <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> and <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, and Mathematics Research Scientist at <a href="https://www.turing.com/">Turing</a>. I am currently on the academic job market, seeking tenure track positions. Here are some links to learn more about me:</p>
 
