--- a/deutsch.html
+++ b/deutsch.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="de">
 
 <head>
   <title>Nima Rasekh's Akademische Webseite</title>
   <meta charset="UTF-8">
-  <meta name="description" content="This is the academic home page of Nima Rasekh.">
+  <meta name="description" content="Das ist die akademische Webseite von Nima Rasekh.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Nima Rasekh">
 </head>
@@ -51,7 +51,7 @@ body {
 <div class="image-container">
     <img src="Nima_MFO.jpg" alt="Photo of Nima Rasekh at Oberwolfach" class="profile-image">
 </div>
-<p>(<a href="https://nimarasekh.github.io/">english version</a>)</p>
+<p>(<a href="https://nimarasekh.github.io/">english version</a>) <br> (<a href="https://nimarasekh.github.io/farsi.html">نسخه فارسی</a>)</p>
 <p> Ich bin zurzeit Postdoktorand am <a href="https://www.uni-greifswald.de/">Universität Greifswald</a> in der Forschungsgruppe von <a href="http://math.konradwaldorf.de">Konrad Waldorf</a> und <a href="https://www.matthias-ludewig.eu/">Matthias Ludewig</a>, und mathematischer Forscher für <a href="https://www.turing.com/">Turing</a>. Ich bin derzeit auf dem akademischen Arbeitsmarkt auf der Suche nach Tenure-Track Positionen. Hier sind einige Links mit mehr Information: </p>
 
 <p>
